[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "track-cli"
version = "0.1.0"
description = "Minimalist terminal app to track working hours by client and task"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "track", email = "noreply@example.com" }
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "questionary>=2.0.1",
]

[project.scripts]
track = "track_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/track_cli"]