[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "track-cli"
version = "0.1.1"
description = "Minimalist terminal app to track working hours by client and task"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "track", email = "noreply@example.com" }
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "questionary>=2.0.1",
]
keywords = ["cli", "time-tracking", "productivity", "terminal", "hours"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ulfaslak/track"
Repository = "https://github.com/ulfaslak/track"

[project.scripts]
track = "track_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/track_cli"]